Fix Recipe cards on small displays

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -573,8 +573,12 @@ h2, h3 {
     }
     
     /*-- Recipe Card --*/
+    .card {
+        height: 33rem;
+    }
+    
     .uploaded-by {
-        margin-top: 1rem;
+        margin-top: 0.5rem;        
     }
 
     .card-image {
